--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'kotlin-kapt'
-    id 'kotlin-android'
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'com.google.dagger.hilt.android' version "2.44" apply false
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id("kotlin-kapt")
+    id("dagger.hilt.android.plugin")
 }
 
 android {
@@ -68,21 +68,22 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-
-// GSON
-
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-// coroutine
-
+    // coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
-
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
 
+    // Hilt
     implementation("com.google.dagger:hilt-android:2.47")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
+    // Moshi
+    implementation "com.squareup.moshi:moshi:1.14.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
 }
 
 // Allow references to generated code
